# RyzenAdj

./: .gitignore  CMakeLists.txt  README.md
lib/linux/: osdep_linux_mem.c
libryzenadj/: osdep.h  ryzen_opts.c  ryzenadj.c  smu_access.c
libryzenadj/win32/: osdep_win32.cpp
linux/ryzen_sm-dkms-arch/: PKGBUILD
win32/: win.rc.in
